chore: Prevent code blocks in super notes from wrapping (#2878)

--- a/packages/web/src/javascripts/Components/SuperEditor/Lexical/Theme/editor.scss
+++ b/packages/web/src/javascripts/Components/SuperEditor/Lexical/Theme/editor.scss
@@ -6,6 +6,9 @@
 .Lexical__rtl {
   text-align: right;
 }
+.Lexical__code {
+  white-space: pre;
+}
 .Lexical__paragraph {
   margin: 0;
   position: relative;
